--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ a:visited {
 
 
 <div class="section">
-<h3><font face="Verdana">Publications</h3>
+<h3 id="publications"><font face="Verdana">Publications</h3>
 <table width="100%">
 
 <!-- MONOGRNET-TPAMI -->
@@ -100,7 +100,7 @@ a:visited {
 <td width="25%" valign="top"><p><img src="figures/monogrnet_pami.PNG" alt="" style="border-style: none" width="250" align="top"></p></td>
 <td width="75%" valign="top">
 <p class="padding"><font face="Verdana">
-<b>MonoGRNet: A General Framework for Monocular 3D Object Detection</b><br>
+<b><a id="monogrnet">MonoGRNet: A General Framework for Monocular 3D Object Detection</a></b><br>
 <b>Zengyi Qin</b>, Jinglu Wang and Yan Lu<br>
 <i>The IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>), 2021</i><br>
 </p>
@@ -118,7 +118,7 @@ a:visited {
 <td width="25%" valign="top"><p><video autoplay="" class="center" loop="" muted="" playsinline="" style="display:block; margin: 0 auto;" width="250"><source src="figures/sablas.mp4" style="display: block; margin-left: auto; margin-right: auto; width:250px" type="video/mp4" /></video></p></td>
 <td width="75%" valign="top">
 <p class="padding"><font face="Verdana">
-<b>SABLAS: Learning Safe Control for Black-Box Dynamical Systems</b><br>
+<b><a id="sablas">SABLAS: Learning Safe Control for Black-Box Dynamical Systems</a></b><br>
 <b>Zengyi Qin</b>, Dawei Sun and Chuchu Fan<br>
 <i>IEEE Robotics and Automation Letters (<b>RA-L</b>), 2022</i><br>
 </p>
@@ -136,7 +136,7 @@ a:visited {
 <td width="25%" valign="top"><p><img src="figures/keto.gif" alt="" style="border-style: none" width="250" align="top"></p></td>
 <td width="75%" valign="top">
 <p class="padding"><font face="Verdana">
-<b>KETO: Learning Keypoint Representations for Tool Manipulation</b><br>
+<b><a id="keto">KETO: Learning Keypoint Representations for Tool Manipulation</a></b><br>
 <b>Zengyi Qin</b>, Kuan Fang, Yuke Zhu, Li Fei-Fei and Silvio Savarese<br>
 <i>The International Conference on Robotics and Automation (<b>ICRA</b>), 2020</i><br>
 </p>
@@ -154,7 +154,7 @@ a:visited {
 <td width="25%" valign="top"><p><img src="figures/macbf.gif" alt="" style="border-style: none" width="250" align="top"></p></td>
 <td width="75%" valign="top">
 <p class="padding"><font face="Verdana">
-<b>Learning Safe Multi-agent Control with Decentralized Neural Barrier Certificates</b><br>
+<b><a id="macbf">Learning Safe Multi-agent Control with Decentralized Neural Barrier Certificates</b><br>
 <b>Zengyi Qin</b>, Kaiqing Zhang, Yuxiao Chen, Jingkai Chen and Chuchu Fan<br>
 <i>The International Conference on Learning Representations (<b>ICLR</b>), 2021</i><br>
 </p>
@@ -172,7 +172,7 @@ a:visited {
 <td width="25%" valign="top"><p><video autoplay="" class="center" loop="" muted="" playsinline="" style="display:block; margin: 0 auto;" width="250"><source src="figures/reactive.mp4" style="display: block; margin-left: auto; margin-right: auto; width:250px" type="video/mp4" /></video></p></td>
 <td width="75%" valign="top">
 <p class="padding"><font face="Verdana">
-<b>Reactive and Safe Road User Simulations using Neural Barrier Certificate</b><br>
+<b><a id="reactive">Reactive and Safe Road User Simulations using Neural Barrier Certificate</a></b><br>
 Yue Meng, <b>Zengyi Qin</b> and Chuchu Fan<br>
 <i>The International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2021</i><br>
 </p>
@@ -190,7 +190,7 @@ Yue Meng, <b>Zengyi Qin</b> and Chuchu Fan<br>
 <td width="25%" valign="top"><p><img src="figures/dcrl.png" alt="" style="border-style: none" width="250" align="top"></p></td>
 <td width="75%" valign="top">
 <p class="padding"><font face="Verdana">
-<b>Density Constrained Reinforcement Learning</b><br>
+<b><a id="dcrl">Density Constrained Reinforcement Learning</a></b><br>
 <b>Zengyi Qin</b>, Yuxiao Chen and Chuchu Fan<br>
 <i>The International Conference on Machine Learning (<b>ICML</b>), 2021</i><br>
 </p>
@@ -208,7 +208,7 @@ Yue Meng, <b>Zengyi Qin</b> and Chuchu Fan<br>
 <td width="25%" valign="top"><p><img src="figures/clbf.JPG" alt="" style="border-style: none" width="250" align="top"></p></td>
 <td width="75%" valign="top">
 <p class="padding"><font face="Verdana">
-<b>Safe Nonlinear Control Using Robust Neural Lyapunov-Barrier Functions</b><br>
+<b><a id="clbf">Safe Nonlinear Control Using Robust Neural Lyapunov-Barrier Functions</a></b><br>
 Charles Dawson, <b>Zengyi Qin</b>, Sicun Gao and Chuchu Fan<br>
 <i>The Conference on Robot Learning (<b>CoRL</b>), 2021</i><br>
 </p>
