--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ a:visited {
 <li><b>Tsinghua University</b>, 2016 - 2020 <br>Bachelor of Engineering, Electronic Engineering <br> Advisor: <a href="https://scholar.google.com/citations?user=A1gA9XIAAAAJ&hl=en">Prof. Jiansheng Chen</a></li>
 </ul>
 <ul>
-<li><b>Stanford University</b>, Summer 2019 <br> Visiting researcher at <a href="http://svl.stanford.edu/people">Stanford Vision and Learning Lab (SVL)</a> <br> Advisor: <a href="http://svl.stanford.edu/people/">Prof. Silvio Savarese</a> and <a href="https://profiles.stanford.edu/fei-fei-li">Prof. Fei-Fei Li</a></li>
+<li><b>Stanford University</b>, 2019 <br> Visiting researcher at <a href="http://svl.stanford.edu/people">Stanford Vision and Learning Lab (SVL)</a> <br> Advisor: <a href="http://svl.stanford.edu/people/">Prof. Silvio Savarese</a> and <a href="https://profiles.stanford.edu/fei-fei-li">Prof. Fei-Fei Li</a></li>
 </ul>
 <ul>
 <li><b>Microsoft Research Asia</b>, 2018 - 2019 <br> Research intern at <a href="https://www.microsoft.com/en-us/research/group/media-computing-group/">Media Computing Group</a> <br> Advisor: <a href="https://jingluw.github.io/">Dr. Jinglu Wang</a> and <a href="https://www.microsoft.com/en-us/research/people/yanlu/">Dr. Yan Lu</a>
