--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ a:visited {
 </td>
 <td width="3%"></td>
 <td width="72%">
-<h2><font face="Verdana">Zengyi (Zen) Qin</h2>
+<h2><font face="Verdana">Zengyi Qin</h2>
 <p><font face="Verdana"><a href="https://scholar.google.com/citations?user=lwwVd7sAAAAJ">Google Scholar</a> | <a href="https://github.com/Zengyi-Qin">Github</a></font></p>
 <p><font face="Verdana">qinzy [at] mit.edu</font></p>
 </td>
