--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@ a:visited {
 <h3><font face="Verdana">Experiences</h3>
 <p><font face="Verdana">
 <ul>
-<li><b>Massachusetts Institute of Technology</b>, 2022 - 2025 <br> PhD in <a href="https://aeroastro.mit.edu/">MIT Department of Aeronautics and Astronautics</a> <br> Advisor: <a href="https://imes.mit.edu/research-staff-prof/brian-anthony/">Dr. Brian Anthony</a></li>
+<li><b>Massachusetts Institute of Technology</b>, 2022 - 2025 <br> Doctor of Philosophy - PhD <br> Advisor: <a href="https://imes.mit.edu/research-staff-prof/brian-anthony/">Dr. Brian Anthony</a></li>
 </ul>
 <ul>
-<li><b>Massachusetts Institute of Technology</b>, 2020 - 2022 <br> S.M. in <a href="https://aeroastro.mit.edu/">MIT Department of Aeronautics and Astronautics</a> <br> Advisor: <a href="https://chuchu.mit.edu/">Prof. Chuchu Fan</a></li>
+<li><b>Massachusetts Institute of Technology</b>, 2020 - 2022 <br> Master's degree in <br> Advisor: <a href="https://chuchu.mit.edu/">Prof. Chuchu Fan</a></li>
 </ul>
 <ul>
 <li><b>Tsinghua University</b>, 2016 - 2020 <br>Bachelor of Engineering, Electronic Engineering <br> Advisor: <a href="https://scholar.google.com/citations?user=A1gA9XIAAAAJ&hl=en">Prof. Jiansheng Chen</a></li>
