--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ a:visited {
 </div>
 
 <div class="section">
-<p><font face="Verdana">I am PhD candidate at <a href="https://www.mit.edu/">Massachusetts Institute of Technology</a>, advised by <a href="https://www.linkedin.com/in/brian-anthony-03a0274/">Dr. Brian Anthony</a>. I received the S.M. degree at MIT, advised by <a href="https://chuchu.mit.edu/">Prof. Chuchu Fan</a>, and B.E. degree of Electronic Engineering at Tsinghua University, advised by <a href="https://scholar.google.com/citations?user=A1gA9XIAAAAJ&hl=en">Prof. Jiansheng Chen</a>. I was fortunate to work as a visiting researcher at Stanford University, advised by <a href="https://svl.stanford.edu/people/">Prof. Fei-fei Li</a> and <a href="https://svl.stanford.edu/people/">Prof. Silvio Savarese</a>.
+<p><font face="Verdana">I am a PhD candidate at <a href="https://www.mit.edu/">Massachusetts Institute of Technology</a>, advised by <a href="https://www.linkedin.com/in/brian-anthony-03a0274/">Dr. Brian Anthony</a>. I received the S.M. degree at MIT, advised by <a href="https://chuchu.mit.edu/">Prof. Chuchu Fan</a>, and B.E. degree of Electronic Engineering at Tsinghua University, advised by <a href="https://scholar.google.com/citations?user=A1gA9XIAAAAJ&hl=en">Prof. Jiansheng Chen</a>. <!-- I was fortunate to work as a visiting researcher at Stanford University, advised by <a href="https://svl.stanford.edu/people/">Prof. Fei-fei Li</a> and <a href="https://svl.stanford.edu/people/">Prof. Silvio Savarese</a>. -->
 </font></p>
 </div>
 
@@ -81,9 +81,11 @@ a:visited {
 <ul>
 <li><b>Tsinghua University</b>, 2016 - 2020 <br>Bachelor of Engineering, Electronic Engineering <br> Advisor: <a href="https://scholar.google.com/citations?user=A1gA9XIAAAAJ&hl=en">Prof. Jiansheng Chen</a></li>
 </ul>
+<!--
 <ul>
 <li><b>Stanford University</b>, 2019 <br> Visiting researcher at <a href="http://svl.stanford.edu/people">Stanford Vision and Learning Lab (SVL)</a> <br> Advisor: <a href="http://svl.stanford.edu/people/">Prof. Silvio Savarese</a> and <a href="https://profiles.stanford.edu/fei-fei-li">Prof. Fei-Fei Li</a></li>
 </ul>
+-->
 <ul>
 <li><b>Microsoft Research Asia</b>, 2018 - 2019 <br> Research intern at <a href="https://www.microsoft.com/en-us/research/group/media-computing-group/">Media Computing Group</a> <br> Advisor: <a href="https://jingluw.github.io/">Dr. Jinglu Wang</a> and <a href="https://www.microsoft.com/en-us/research/people/yanlu/">Dr. Yan Lu</a>
 </ul>
