--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ body {
 }
 p { 
   text-align: justify;
-  font-size: 11pt;
+  font-size: 1em;
   line-height: 1.4;
 }
 
@@ -19,8 +19,8 @@ p.padding {
 
 ul { 
   text-align: justify;
-  font-size: 11pt;
-  line-height: 1.45;
+  font-size: 1em;
+  line-height: 1.4;
 }
 
 a:link {
@@ -43,6 +43,8 @@ a:visited {
 
 li {
     margin-bottom: 8px;
+    font-size: 1em;
+    line-height: 1.4;
 }
 
 .section {max-width:1024px}
