--- a/publications.html
+++ b/publications.html
@@ -6,6 +6,10 @@ body {
   margin-bottom: 50px;
   margin-left: 80px;
   margin-right: 80px;
+  background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url('figures/background.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
 }
 p { 
   text-align: justify;
