--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ li {
       My research publications have been cited by scholars in over <hl>38 countries</hl>, according to Google Scholar metrics. My research is featured in the most prestigious journals and conferences in the AI field, such as TPAMI, ICML, ICLR, CVPR, etc.
     </li>
     <li>
-      My expertise in AI covers most fields that you can think of, such as <hl>Computer Vision, Language Models, Audios, and Robotics</hl>. A part of my PhD research is foundational <hl>Healthcare Technology</hl> to enable the surgeons to see the invisible and improve patient care.
+      I have 6+ years of AI R&D experience. My expertise in AI covers most fields that you can think of, such as <hl>Computer Vision, Language Models, Audios, and Robotics</hl>. A part of my PhD research is foundational <hl>Healthcare Technology</hl> to enable the surgeons to see the invisible and improve patient care.
     </li>
     <li>
       I lead the AI team in <a href="https://myshell.ai">MyShell</a> and developed the super exciting <hl>Generative AI platform</hl> for everyone to create various smart virtual beings with unique personalities and voices. The product goes viral and has reached several hundred K users in less than half a year.
