--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ li {
 </td>
 <td width="3%"></td>
 <td width="72%">
-<h2><font face="Verdana">Zengyi Qin</h2>
+<h2><font face="Verdana">Zengyi (Zen) Qin</h2>
 <p><font face="Verdana">PhD Candidate at MIT</font></p>
 <p><font face="Verdana">qinzy [at] mit.edu</font></p>
 </td>
