--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ li {
 <td width="3%"></td>
 <td width="72%">
 <h2><font face="Verdana">Zengyi (Zen) Qin</h2>
-<p><font face="Verdana">PhD Candidate at MIT</font></p>
+<p><font face="Verdana">PhD Researcher at MIT</font></p>
 <p><font face="Verdana">qinzy [at] mit.edu</font></p>
 </td>
 </tr>
