--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ li {
 <h3><font face="Verdana">Education</h3>
 <p><font face="Verdana">
 <ul>
-<li><b>Massachusetts Institute of Technology</b>, 2020 - 2025 <br> Doctor of Philosophy - PhD <br> Advisor: <a href="https://imes.mit.edu/research-staff-prof/brian-anthony/">Dr. Brian Anthony</a></li>
+<li><b>Massachusetts Institute of Technology</b>, 2020 - 2025 <br> Doctor of Philosophy - PhD <br> Advisor: <a href="https://professional.mit.edu/programs/faculty-profiles/brian-anthony">Dr. Brian Anthony</a></li>
 <li><b>Massachusetts Institute of Technology</b>, 2020 - 2022 <br> Master's degree <br> Advisor: <a href="https://chuchu.mit.edu/">Prof. Chuchu Fan</a></li>
 </ul>
 </font></p>
