--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@ li {
 <h3><font face="Verdana">Education</h3>
 <p><font face="Verdana">
 <ul>
-<li><b>Massachusetts Institute of Technology</b>, 2020 - 2024 <br> Doctor of Philosophy - PhD <br></li>
-<li><b>Massachusetts Institute of Technology</b>, 2020 - 2022 <br> Master's degree <br></li>
+<li><b>Massachusetts Institute of Technology</b>, 2020 - 2024 <br> Doctor of Philosophy - PhD <br> I mainly work with <a href="https://www.csail.mit.edu/">MIT CSAIL</a> (Computer Science and Artificial Intelligence Laboratory) and <a href="https://imes.mit.edu/">MIT IMES</a> (Institute for Medical Engineering and Science) on foundational AI technologies.</li>
+<li><b>Massachusetts Institute of Technology</b>, 2020 - 2022 <br> Master's degree <br> My research in safety-guaranteed machine learning at <a href="https://aeroastro.mit.edu/realm/">MIT REALM</a> has not only become a key feature of the lab but also inspired numerous subsequent studies.</li>
 </ul>
 </font></p>
 </div>
