--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ li {
 <meta name="baidu-site-verification" content="Ctys5yXPkU" />
 <meta name="google-site-verification" content="9qnP6wIE8rh3TwMVrb84fWPqg9A_nDYEL3D6NGDjpwU" />
 <meta name="keywords" content="Zengyi Qin, Zengyi Qin, Zengyi Qin, Zengyi Qin, Zengyi Qin">
-<title>Zengyi (Zen) Qin | MIT</title>
+<title>Zengyi Qin | MIT</title>
 <meta charset="utf-8">
 </head>
 
@@ -71,7 +71,7 @@ li {
 </td>
 <td width="3%"></td>
 <td width="72%">
-<h2><font face="Verdana">Zengyi (Zen) Qin</h2>
+<h2><font face="Verdana">Zengyi Qin</h2>
 <p><font face="Verdana">qinzy [at] mit.edu</font></p>
 </td>
 </tr>
