--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ li {
 <meta name="msvalidate.01" content="F09EB454EEBF59AD68CB64C1A341AA9A" />
 <meta name="baidu-site-verification" content="Ctys5yXPkU" />
 <meta name="google-site-verification" content="9qnP6wIE8rh3TwMVrb84fWPqg9A_nDYEL3D6NGDjpwU" />
-<meta name="keywords" content="Zengyi Qin, Zengyi Qin, Zengyi Qin, Zengyi Qin, Zengyi Qin">
+<meta name="keywords" content="Zengyi Qin, Zen Qin, Charles Qin">
 <title>Zengyi Qin | MIT</title>
 <meta charset="utf-8">
 </head>
