--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@ li {
   <p><font face="Verdana">
    <ul>
     <li>
-      My research publications have been cited by scholars in over <hl>38 countries</hl>, according to Google Scholar metrics. My research is featured in the most prestigious journals and conferences in the AI field, such as TPAMI, ICML, ICLR, CVPR, etc.
+      My research publications have been cited by scholars in over 38 countries, according to Google Scholar metrics. My research is featured in the top journals and conferences in the AI field, such as TPAMI, ICML, ICLR, CVPR, etc. I published most of my papers <hl>during my undergraduate</hl>, and I am all in entrepreneurship during PhD.
     </li>
     <li>
-      I have 6+ years of AI R&D experience. My expertise in AI covers most fields that you can think of, such as <hl>Computer Vision, Language Models, Audios, and Robotics</hl>. A part of my PhD research is foundational <hl>Healthcare Technology</hl> to enable the surgeons to see the invisible and improve patient care.
+      I have 6+ years of AI R&D experience. My expertise in AI covers 3D computer vision, language models, audios, and robotics. I am currently working on Large Language Models, Audio Generation, and LLM Agents, with a particular focus on <hl>applied research with practical significance</hl>, rather than chasing after numerical benchmarks.
     </li>
     <li>
-      I lead the AI team in <a href="https://myshell.ai">MyShell</a> and developed the super exciting <hl>Generative AI platform</hl> for everyone to create various smart virtual beings with unique personalities and voices. The product goes viral and has reached several hundred K users in less than half a year.
+      I lead the AI team in <a href="https://myshell.ai">MyShell</a> and developed the super exciting platform for every one to create AI-native APPs without coding. The product goes viral and has reached several hundred K users in less than half a year. I was also the Chair of AI sector in MIT Chinese Entrepreneurs Organization.
     </li>
    </ul>
   </font></p>
