--- a/index.html
+++ b/index.html
@@ -114,6 +114,22 @@ li {
 <div class="section">
   <h3 id="publications"><font face="Verdana">Publications</h3>
   <table width="100%">
+
+  <!-- OpenVoice -->
+  <tr>
+    <td width="25%" valign="middle"><p><img src="figures/openvoice.png" alt="" style="border-style: none" width="250" align="top"></p></td>
+    <td width="75%" valign="top">
+    <p class="padding"><font face="Verdana">
+    <b><a id="openvoice">OpenVoice: Versatile Instant Voice Cloning</a></b><br>
+    <b>Zengyi Qin</b>, Wenliang Zhao, Xumin Yu and Xin Sun<br>
+    <i>Technical Report, 2023</i><br>
+    </p>
+    <p class="padding"><font face="Verdana"> Instantly clone any voice to generate speech in any style and any language.
+    </p>
+    <p class="padding"><font face="Verdana">
+    <a href="https://arxiv.org/abs/2312.01479">paper</a> | <a href="https://research.myshell.ai/open-voice">website</a> | <a href="https://github.com/myshell-ai/OpenVoice">source code</a>
+    </p></td>
+  </tr>
   
   <!-- MONOGRNET-TPAMI -->
   <tr>
