--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ li {
       I have 6+ years of AI R&D experience. I am working on Large Language Models, Audio Generation, and LLM Agents, with a particular focus on <hl>applied research with practical significance</hl>, rather than chasing after numerical benchmarks.
     </li>
     <li>
-      I lead the AI team in <a href="https://myshell.ai">MyShell</a> and developed the super exciting platform for every one to create AI-native APPs without coding. The product goes viral and has reached several hundred K users in less than half a year. I was also the Chair of AI sector in MIT Chinese Entrepreneurs Organization.
+      I lead the AI team in <a href="https://myshell.ai">MyShell</a> and developed the super exciting Open Ecosystem for AI-native Applications. MyShell went viral and reached more than 1 million users. I was also the Chair of AI sector in MIT Chinese Entrepreneurs Organization.
     </li>
    </ul>
   </font></p>
