--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ li {
 
 <div class="section">
 <p><font face="Verdana">
-  I am a <hl>scientist and entrepreneur</hl>, currently pursuing my <hl>PhD at the Massachusetts Institute of Technology</hl>.
+  I am an <hl>AI researcher, entrepreneur, and PhD candidate at MIT.</hl>
 </font></p>
 </div>
 
