--- a/index.html
+++ b/index.html
@@ -95,10 +95,7 @@ li {
       My research work on Generative AI has been internationally recognized, and was ranked Global Top 1 on GitHub Trending, HuggingFace Trending, surpassing contemporary work by Meta and Microsoft, and covered by several well-known international medias such as VentureBeat.
     </li>
     <li>
-      I have 6+ years of AI R&D experience. I am working on Large Language Models, Audio Generation, and LLM Agents, with a particular focus on <hl>applied research with practical significance</hl>, rather than chasing after numerical benchmarks.
-    </li>
-    <li>
-      I lead the AI team in <a href="https://myshell.ai">MyShell</a> and developed the super exciting Open Ecosystem for AI-native Applications. MyShell went viral and reached more than 1 million users. I was also the Chair of AI sector in MIT Chinese Entrepreneurs Organization.
+      I have 7+ years of AI R&D experience. My focus is on <hl>applied research with practical significance</hl>, and I have extensive (and successful) experience in transforming cutting-edge technologies into practical products. I was also the Chair of AI sector in MIT Chinese Entrepreneurs Organization.
     </li>
    </ul>
   </font></p>
