--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ li {
 </font></p>
 </div>
 
-<div class="section">
+<!-- <div class="section">
   <h3><font face="Verdana">Highlights</h3>
   <p><font face="Verdana">
    <ul>
@@ -101,7 +101,7 @@ li {
     </li>
    </ul>
   </font></p>
-</div>
+</div> -->
 
 <div class="section">
 <h3><font face="Verdana">Education</h3>
@@ -141,6 +141,21 @@ li {
 <div class="section">
   <h3 id="publications"><font face="Verdana">Publications</h3>
   <table width="100%">
+
+  <!-- JetMoE -->
+  <tr>
+    <td width="25%" valign="middle"><p><img src="figures/jetmoe.PNG" alt="" style="border-style: none" width="250" align="top"></p></td>
+    <td width="75%" valign="top">
+    <p class="padding"><font face="Verdana">
+    <b><a id="openvoice">JetMoE: Reaching LLaMA2 Performance with 0.1M Dollars</a></b><br>
+    Yikang Shen, Zhen Guo, Tianle Cai and <b>Zengyi Qin</b><br>
+    <i>Technical Report, 2023</i><br>
+    </p>
+    <p class="padding"><font face="Verdana"> Training high-performance LLM with remarkable cost efficiency. <br>
+    <a href="https://research.myshell.ai/jetmoe">website</a> | <a href="https://github.com/myshell-ai/JetMoE">github</a> | <a href="https://arxiv.org/pdf/2404.07413.pdf">tech report</a> <br>
+    </p>
+    </td>
+  </tr>
 
   <!-- OpenVoice -->
   <tr>
