--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ li {
       </ul>
     </li>
     <li>
-      [Jan 2024] We released <hl>OpenVoice</hl>, which allows you to clone any voice and generate speech in many styles and languages. It got massive attention in the field and was adopted by many commercial products.
+      [Jan 2024] We released <a href="https://research.myshell.ai/open-voice">OpenVoice</a> for human-level speech generation, enabling users to clone any voice and generate speech in various styles and languages.
       <ul>
         <a href="https://research.myshell.ai/open-voice">Technical blog</a> <br> 
         Trended<a href="./figures/githubtrending-no1-v3.PNG"> 1st on Github</a>. Now 27k stars <br> 
