--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ li {
 
 <div class="section">
 <p><font face="Verdana">
-  I am a PhD candidate at MIT working on <hl>multi-modal generative AI</hl>, with a recent focus on <hl>audio and text</hl> modalities. 
+  I am a PhD candidate at MIT working on multi-modal generative AI, with a recent focus on <hl>speech and audio generation</hl>. My goal is to build <hl>General-purpose Human-level Audio Intelligence</hl>, driving innovation in how machines understand, generate, and interact with humans via voice and audio interface.
 </font></p>
 </div>
 
