--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@ li {
 <p><font face="Verdana">
   I am a PhD candidate at MIT working on multi-modal generative AI, with a recent focus on <hl>speech and audio generation</hl>. My goal is to build <hl>General-purpose Human-level Audio Intelligence</hl>, driving innovation in how machines understand, generate, and interact with humans via voice and audio interface.
 </font></p>
+<p><font face="Verdana">
+  Prior to 2023, I also worked on multi-agent safe control, and visual perception in 3D space.
+</font></p>
 </div>
 
 <div class="section">
@@ -92,6 +95,7 @@ li {
 <ul>
 <li><b>Massachusetts Institute of Technology</b>, 2022 - 2025 <br> Doctor of Philosophy - PhD <br> Affiliated with <a href="https://www.csail.mit.edu/">MIT CSAIL</a> (Computer Science and Artificial Intelligence Laboratory) and <a href="https://aeroastro.mit.edu/">MIT AeroAstro</a>. </li>
 <li><b>Massachusetts Institute of Technology</b>, 2020 - 2022. Master of Science <br>
+<li><b>Tsinghua University</b>, 2016 - 2020. Bachelor of Engineering, Electronic Engineering<br>
 </ul>
 </font></p>
 </div>
@@ -125,7 +129,7 @@ li {
 </div>
 
 <div class="section">
-  <h3 id="publications"><font face="Verdana">Publications</h3>
+  <h3 id="publications"><font face="Verdana">Projects</h3>
   <table width="100%">
 
   <!-- OpenVoice -->
@@ -145,6 +149,20 @@ li {
     </p></td>
   </tr>
 
+  <!-- Interspeech -->
+  <tr>
+    <td width="25%" valign="middle"><p><img src="figures/dreamvoice.png" alt="" style="border-style: none" width="250" align="top"></p></td>
+    <td width="75%" valign="middle">
+    <p class="padding"><font face="Verdana">
+    <b><a id="dreamvoice">DreamVoice: Text-Guided Voice Conversion</a></b><br>
+    Jiarui Hai, Karan Thakkar, Helin Wang, <b>Zengyi Qin</b>, Mounya Elhilali<br>
+    <i>Interspeech, 2024</i><br>
+    </p>
+    <p class="padding"><font face="Verdana"> Convert a voice into any voice based on the input text prompt. <br>
+    <a href="https://arxiv.org/abs/2406.16314">paper</a> | <a href="https://research.myshell.ai/dreamvoice">website</a> | <a href="https://github.com/myshell-ai/DreamVoice">source code</a> <br>
+    </p>
+  </tr>
+
   <!-- JetMoE -->
   <tr>
     <td width="25%" valign="middle"><p><img src="figures/jetmoe.PNG" alt="" style="border-style: none" width="250" align="top"></p></td>
@@ -158,6 +176,22 @@ li {
     <a href="https://research.myshell.ai/jetmoe">website</a> | <a href="https://github.com/myshell-ai/JetMoE">github</a> | <a href="https://arxiv.org/pdf/2404.07413.pdf">tech report</a> <br>
     </p>
     </td>
+  </tr>
+
+  <!-- MeloTTS -->
+  <tr>
+    <td width="25%" valign="middle"><p><img src="figures/melotts.png" alt="" style="border-style: none" width="250" align="top"></p></td>
+    <td width="75%" valign="middle">
+    <p class="padding"><font face="Verdana">
+    <b><a id="melotts">MeloTTS: A high-quality multi-lingual multi-accent text-to-speech library</a></b><br>
+    Wenliang Zhao, Xumin Yu, <b>Zengyi Qin</b>
+    </p>
+    <p class="padding"><font face="Verdana"> High-quality multi-lingual text-to-speech library that supports English (US, BR, AU, INDIAN), Spanish, French, Chinese, Japanese and Korean <br>
+    <a href="https://github.com/myshell-ai/MeloTTS">source code</a> <br>
+    </p>
+    <p class="padding">
+      <a class="github-button" href="https://github.com/myshell-ai/MeloTTS" data-color-scheme="no-preference: light; light: light; dark: dark;" data-show-count="true" aria-label="Star myshell-ai/OpenVoice on GitHub">Star</a> 
+    </p></td>
   </tr>
 
   <!-- Sablas -->
