--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ li {
   <p><font face="Verdana">
    <ul>
     <li>
-      [Jan 2024] We released <a href="https://research.myshell.ai/open-voice">OpenVoice</a> for human-level speech generation, enabling users to clone any voice and generate speech in various styles and languages.
+      [Jan 2024] We released <a href="https://research.myshell.ai/open-voice">OpenVoice</a> for speech generation and voice cloning, enabling users to clone any voice and generate speech in various styles and languages.
       <ul>
         <a href="https://research.myshell.ai/open-voice">Technical blog</a> <br> 
         Trended<a href="./figures/githubtrending-no1-v3.PNG"> 1st on Github</a>. Now 27k stars <br> 
