--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ li {
 
 <div class="section">
 <p><font face="Verdana">
-  I am a PhD candidate at MIT working on multi-modal generative AI, with a recent focus on <hl>speech and audio generation</hl>. My goal is to build <hl>General-purpose Human-level Audio Intelligence</hl>, driving innovation in how machines understand, generate, and interact with humans via voice and audio interface.
+  I am a PhD candidate at MIT working on multi-modal generative AI, with a recent focus on <hl>speech and audio generation</hl>. My goal is to build <hl>general-purpose multi-modal intelligence</hl>, driving innovation in how machines understand, generate, and interact with humans via visual, audio and text interface.
 </font></p>
 <p><font face="Verdana">
   Prior to 2023, I also worked on multi-agent safe control, and visual perception in 3D space.
@@ -106,7 +106,7 @@ li {
   <p><font face="Verdana">
    <ul>
     <li>
-      [Jan 2024] We released <a href="https://research.myshell.ai/open-voice">OpenVoice</a> for speech generation and voice cloning, enabling users to clone any voice and generate speech in various styles and languages.
+      [Jan 2024] We released <a href="https://research.myshell.ai/open-voice">OpenVoice</a>, allowing users to clone any voice and generate speech in various styles and languages.
       <ul>
         <a href="https://research.myshell.ai/open-voice">Technical blog</a> <br> 
         Trended<a href="./figures/githubtrending-no1-v3.PNG"> 1st on Github</a>. Now 27k stars <br> 
