--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ li {
 
 <div class="section">
 <p><font face="Verdana">
-  I am a PhD candidate at MIT working on multi-modal generative AI, with a recent focus on <hl>speech and audio generation</hl>. My goal is to build <hl>general-purpose multi-modal intelligence</hl>, driving innovation in how machines understand, generate, and interact with humans via visual, audio and text interface.
+  I am a PhD student at MIT, affiliated with MIT CSAIL and AeroAstro. My ultimate goal is to develop general-purpose intelligence that advances how machines understand, interact, and create in both the digital and physical worlds. My experience spans generative models for multiple modalities (text, audio, etc), 3D computer vision, and robotics. I am fortunate to work with Dr. Brian Anthony and Prof. Bill Freeman at MIT.
 </font></p>
 <p><font face="Verdana">
   Prior to 2023, I also worked on multi-agent safe control, and visual perception in 3D space.
@@ -110,7 +110,7 @@ li {
       <ul>
         <a href="https://research.myshell.ai/open-voice">Technical blog</a> <br> 
         Trended<a href="./figures/githubtrending-no1-v3.PNG"> 1st on Github</a>. Now 27k stars <br> 
-        <hl>Serving >2M users</hl> on MyShell. Solid production-grade algorithm <br>
+        <hl>Serving >3M users</hl> on MyShell. Solid production-grade algorithm <br>
         Covered by <a href='https://venturebeat.com/ai/open-source-ai-voice-cloning-arrives-with-myshells-new-openvoice-model/'>VentureBeat</a>, <a href="https://hyscaler.com/insights/ai-voice-cloning-revolution/">HyScaler</a> and other medias <br>
         <i>AI Voice Cloning Redefined: OpenVoice Unveils Revolutionary Open-Source Technology</i> (<a href="https://hyscaler.com/insights/ai-voice-cloning-revolution">1</a>)
       </ul>
@@ -145,22 +145,8 @@ li {
     <a href="https://arxiv.org/abs/2312.01479">paper</a> | <a href="https://research.myshell.ai/open-voice">website</a> | <a href="https://github.com/myshell-ai/OpenVoice">source code</a> <br>
     </p>
     <p class="padding">
-    Trended 1st on Github <a class="github-button" href="https://github.com/myshell-ai/OpenVoice" data-color-scheme="no-preference: light; light: light; dark: dark;" data-show-count="true" aria-label="Star myshell-ai/OpenVoice on GitHub">Star</a> 
+    <hl>Trended 1st on Github</hl> <a class="github-button" href="https://github.com/myshell-ai/OpenVoice" data-color-scheme="no-preference: light; light: light; dark: dark;" data-show-count="true" aria-label="Star myshell-ai/OpenVoice on GitHub">Star</a> 
     </p></td>
-  </tr>
-
-  <!-- Interspeech -->
-  <tr>
-    <td width="25%" valign="middle"><p><img src="figures/dreamvoice.png" alt="" style="border-style: none" width="250" align="top"></p></td>
-    <td width="75%" valign="middle">
-    <p class="padding"><font face="Verdana">
-    <b><a id="dreamvoice">DreamVoice: Text-Guided Voice Conversion</a></b><br>
-    Jiarui Hai, Karan Thakkar, Helin Wang, <b>Zengyi Qin</b>, Mounya Elhilali<br>
-    <i>Interspeech, 2024</i><br>
-    </p>
-    <p class="padding"><font face="Verdana"> Convert a voice into any voice based on the input text prompt. <br>
-    <a href="https://arxiv.org/abs/2406.16314">paper</a> | <a href="https://research.myshell.ai/dreamvoice">website</a> | <a href="https://github.com/myshell-ai/DreamVoice">source code</a> <br>
-    </p>
   </tr>
 
   <!-- JetMoE -->
@@ -176,6 +162,20 @@ li {
     <a href="https://research.myshell.ai/jetmoe">website</a> | <a href="https://github.com/myshell-ai/JetMoE">github</a> | <a href="https://arxiv.org/pdf/2404.07413.pdf">tech report</a> <br>
     </p>
     </td>
+  </tr>
+
+  <!-- Interspeech -->
+  <tr>
+    <td width="25%" valign="middle"><p><img src="figures/dreamvoice.png" alt="" style="border-style: none" width="250" align="top"></p></td>
+    <td width="75%" valign="middle">
+    <p class="padding"><font face="Verdana">
+    <b><a id="dreamvoice">DreamVoice: Text-Guided Voice Conversion</a></b><br>
+    Jiarui Hai, Karan Thakkar, Helin Wang, <b>Zengyi Qin</b>, Mounya Elhilali<br>
+    <i>Interspeech, 2024</i><br>
+    </p>
+    <p class="padding"><font face="Verdana"> Convert a voice into any voice based on the input text prompt. <br>
+    <a href="https://arxiv.org/abs/2406.16314">paper</a> | <a href="https://research.myshell.ai/dreamvoice">website</a> | <a href="https://github.com/myshell-ai/DreamVoice">source code</a> <br>
+    </p>
   </tr>
 
   <!-- MeloTTS -->
